@startuml



abstract class Job << Abstract >> {
    + execute()
}

class SurpriseDistanceMatrixJob {
    - n_most_similars_users: Int
    - n_most_similars_items: Int
    - recommender_name: Str
}
Job ^-[#blue]- SurpriseDistanceMatrixJob: Is a

class BertItemDistanceMatrixJob {
    - model_name: Str
    - n_most_similars: Int
}
Job ^-[#blue]- BertItemDistanceMatrixJob: Is a

BertItemDistanceMatrixJob o-- ItemService
BertItemDistanceMatrixJob o-- SimilarityMatrixService

SurpriseDistanceMatrixJob o-- InteractionService
SurpriseDistanceMatrixJob o-- RatingMatrixService
SurpriseDistanceMatrixJob o-- SimilarityService
SurpriseDistanceMatrixJob o-- SimilarityMatrixService
SurpriseDistanceMatrixJob o-- RecommenderService



class ItemService {
    + find_all()
    + find_by()
}
ItemService o-- ItemRepository


class RatingMatrixService {
    + create()
}
RatingMatrixService o-- InteractionRepository


class SimilarityService {
    + similarities()
    + filter_most_similars()
}

class SimilarityMatrixService {
    + update_user_similarity_matrix()
    + update_item_similarity_matrix()
    + add_cells_and_update()
    + create_or_get()
    + update()
    + add_cells()
}
SimilarityMatrixService o-- SimilarityMatrixRepository
SimilarityMatrixService o-- SimilarityMatrixCellRepository
SimilarityMatrixService o-- InteractionService
SimilarityMatrixService o-- SimilarityService



class RecommenderService {
    + upsert()
    + update()
}
RecommenderService o-- RecommenderRepository


class InteractionService {
    + n_interactions_by_user()
    + filter_users_by_min_interactions()
    + find_all()
    + unrated_user_item()
    + items_by_user()
    + plot_n_users_by_item()
    + add_many()
}
InteractionService o-- InteractionRepository




abstract class EntityRepository << Abstract >> {
    + find()
}

class ItemRepository {
    + find_all()
    + find_by()
}
EntityRepository ^-[#blue]- ItemRepository: Is a
EntityRepository o-- RecSysAPIClient

class InteractionRepository {
    + add_many()
}
EntityRepository ^-[#blue]- InteractionRepository: Is a

class RecommenderRepository {
    + add()
    + update()
    + remove()
}
EntityRepository ^-[#blue]- RecommenderRepository: Is a


class SimilarityMatrixCellRepository {
    + add_many()
    + remove()
}
EntityRepository ^-[#blue]- SimilarityMatrixCellRepository: Is a


class SimilarityMatrixRepository {
    + add()
    + update()
    + versions()
    + previous_versions()
    + remove_previous_versions()
    + remove_version()
    + remove()
}
EntityRepository ^-[#blue]- SimilarityMatrixRepository: Is a



class RecSysAPIClient {
    + users()
    + items()
    + bulk_add_interactions()
    + interactions()
    + similarity_matrix()
    + add_similarity_matrix()
    + update_similarity_matrix()
    + remove_similarity_matrix()
    + similarity_matrix_versions()
    + remove_similarity_version()
    + similarity_cells()
    + bulk_add_similarity_cells()
    + remove_similarity_cell()
    + recommenders()
    + add_recommender()
    + update_recommender()
    + remove_recommender()
}

@enduml